--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,14 @@ services:
     ports:
       - "9000:9000"
     volumes:
-      - ./scala-backend:/app
+      - ./scala-backend:/app:cached
     depends_on:
       - db
     profiles:
       - scala
     environment:
       - CHOKIDAR_USEPOLLING=true # Enable polling for file changes
+    restart: always
 
   nodejs-backend:
     build: ./nodejs-backend
