--- a/nodejs-backend/package.json
+++ b/nodejs-backend/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
-    "build": "tsc"
+    "dev": "nodemon --watch src -e ts --exec 'yarn test;ts-node src/server.ts'",
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
@@ -25,6 +26,13 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.6"
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-typescript": "^7.25.7",
+    "@types/jest": "^29.5.13",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.6",
+    "ts-jest": "^29.2.5"
   }
 }
